--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,74 +1,81 @@
 body {
-  background: #f5f5f5;
+    background: #f5f5f5;
 }
 
 #content {
-  max-width: 800px;
-  min-width: 320px;
-  margin: 0 auto;
-  padding: 55px 0 0 0;
+    max-width: 800px;
+    min-width: 320px;
+    margin: 0 auto;
+    padding: 55px 0 0 0;
 }
 
 /* ヘッダー */
 #header {
-  background: #fff;
-  display: flex;
-  padding: 15px 0 0 0;
-  border-bottom: solid 1px #ebebeb;
-  position: fixed;
-  justify-content: space-between;
-  width: 100%;
-  overflow-x: hidden;
-  z-index: 100;
+    background: #fff;
+    display: flex;
+    padding: 15px 0 0 0;
+    border-bottom: solid 1px #ebebeb;
+    position: fixed;
+    justify-content: space-between;
+    width: 100%;
+    overflow-x: hidden;
+    z-index: 100;
 }
 
 #header #header_nav {
-  margin: 0 auto;
+    margin: 0 auto;
 }
 
 #header ul {
-  width: auto;
-  height: 40px;
-  margin: 0;
-  padding: 0;
-  white-space:nowrap;
-  list-style: none;
+    width: auto;
+    height: 40px;
+    margin: 0;
+    padding: 0;
+    white-space:nowrap;
+    list-style: none;
 }
 
 #header li {
-  width: 140px;
-  display: inline-block;
-  white-space:normal;
-  text-align: center;
-  list-style: none;
+    width: 140px;
+    display: inline-block;
+    white-space:normal;
+    text-align: center;
+    list-style: none;
 }
 #header .nav_item:not(:last-child){
-  border-right: 2px solid #ddd;
+    border-right: 2px solid #ddd;
 }
 
 #header li a {
-  display: block;
-  margin: 0 15px;
-  height: 40px;
-  line-height: 40px;
-  text-decoration: none;
-  font-size: 12px;
-  font-weight: bold;
-  color: #484848;
+    display: block;
+    margin: 0 15px;
+    height: 40px;
+    line-height: 40px;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: bold;
+    color: #484848;
 }
-/*
-#header li.current a{
-  border-bottom: 3px solid #68baf5;
-}
-*/
+
 #header li a:hover{
-  border-bottom: 3px solid #68baf5;
+    border-bottom: 3px solid #68baf5;
 }
 
 
-/*500px以下で適用する内容*/
-@media screen and (max-width:500px){
-  #header li {
-    width: 100px;
-  }
+/* スマホ表示 */
+@media screen and (max-width:750px){
+    #content {
+        padding: 116px 0 0 0;
+    }
+    #header ul {
+        height: 100px;
+    }
+    #header li {
+        width: 220px;
+    }
+    #header li a {
+        height: 100px;
+        line-height: 100px;
+        font-size: 25px;
+    }
 }
